--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:test}
+server.servlet.context-path=/api
 
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:test}
 spring.jpa.open-in-view=false
