--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@stomp/rx-stomp": "^1.1.4",
+    "@stomp/stompjs": "^6.1.2",
+    "net": "^1.0.2",
     "rxjs": "~7.5.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
+    "websocket": "^1.0.34",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -28,6 +33,8 @@
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
