--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@stomp/rx-stomp": "^1.1.4",
     "@stomp/stompjs": "^6.1.2",
     "net": "^1.0.2",
+    "qr-scanner": "^1.4.1",
     "rxjs": "~7.5.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
